# ai-home-butler

./: .env.example  .gitignore  README.md  compose.yml  smoke_test.sh
data/home-docs/: getting-started.md
esp32s3-ai/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
esp32s3-ai/main/: CMakeLists.txt  Kconfig.projbuild  device_state.h  idf_component.yml  main.cpp  ws_transport_shim.h
esp32s3-ai/main/LCD_Driver/: ST77916.c
esp32s3-ai/main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
esp32s3-ai/main/audio/: audio_pipeline.cpp  audio_pipeline.h
esp32s3-ai/main/display/: face_display.cpp  face_display.h  stackchan_assets.c  stackchan_assets.h  stackchan_bitmap_eye.h  stackchan_bitmap_mouth.h  ui_manager.cpp  ui_manager.h
esp32s3-ai/main/hal/: board.h
esp32s3-ai/main/network/: mqtt_client.cpp  mqtt_client.h  ws_client.cpp  ws_client.h
mcp-servers/fetch/: Containerfile  main.py
mosquitto/: mosquitto.conf
mosquitto/config/: mosquitto.conf
orchestrator/: adapter.py  main.py  mcp_client.py  memory.py  requirements.txt  tools.py
rag/: Containerfile  main.py  requirements.txt
stt/: Containerfile  main.py  requirements.txt
tts/: Containerfile  main.py  requirements.txt
